// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Theme Renders a CUSTOM theme, with new colors customized 1`] = `
<button
  className="eButton Button-eButton-0-1-3 Button-eButton-0-1-1"
>
  Button
</button>
`;

exports[`Theme Renders a default theme, without any customization 1`] = `
<button
  className="eButton Button-eButton-0-1-2 Button-eButton-0-1-1"
>
  Button
</button>
`;
